home section complete

--- a/looplab/index.html
+++ b/looplab/index.html
@@ -35,15 +35,88 @@
             <a href="#share-head-section" class="nav-link">Share</a>
           </li>
         </ul>
-
       </div>
-
     </div>
-
-
-
-
   </nav>
+
+  <!-- HOME SECTION -->
+  <header id="home-section">
+    <div class="dark-overlay">
+      <div class="home-inner container">
+        <div class="row">
+          <!-- column left start -->
+          <div class=" col-lg-8 d-none d-lg-block">
+            <!-- col left heading -->
+            <h1 class="display-4">
+              Build
+              <strong>social profiles</strong> and gain revenue
+              <strong>profits</strong>
+            </h1>
+            <!-- col left check box section -->
+            <!-- check box 1 -->
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi perspiciatis omnis vel eligendi! Labore, sunt!
+              </div>
+            </div>
+            <!-- check box 2 -->
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi perspiciatis omnis vel eligendi! Labore, sunt!
+              </div>
+            </div>
+            <!-- check box 3 -->
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi perspiciatis omnis vel eligendi! Labore, sunt!
+              </div>
+            </div>
+          </div>
+          <!-- column left END -->
+          <!-- col right start -->
+          <div class="col-lg-4">
+            <div class="card bg-primary card-form">
+              <div class="card-body text-center">
+                <h3>Sign up Today</h3>
+                <p>Please fill this form to register</p>
+                <!-- sign-up form start-->
+                <form>
+                  <div class="form-group">
+                    <input type="text" class="form-control form-control-lg" placeholder="Username">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control form-control-lg" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control form-control-lg" placeholder="Password">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control form-control-lg" placeholder="Confirm password">
+                  </div>
+                  <input type="submit" value="SUBMIT" class="btn btn-outline-light btn-block">
+                </form>
+                <!-- sign up form end -->
+              </div>
+            </div>
+          </div>
+          <!-- col right end -->
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- HOME SECTION ENDS  -->
+
+
+
+
+
 
 
 
