--- a/looplab/index.html
+++ b/looplab/index.html
@@ -113,6 +113,52 @@
 
   <!-- HOME SECTION ENDS  -->
 
+  <!--EXPLORE HEAD  -->
+  <section id="explore-head-section">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center py-4">
+          <h1 class="display-4">Explore</h1>
+          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem velit nisi, sit quos est, totam eos soluta
+          </p>
+          <a href="" class="btn btn-outline-secondary">Find Out More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- EXPLORE SECTION -->
+  <section id="explore-section" class="bg-light py-5">
+    <div class="container">
+      <div class="row d-flex align-items-center justify-content-center">
+        <div class="col-lg-6">
+          <img src="./img/explore.jpg" alt="" class="img-fluid mb-5 rounded-circle">
+        </div>
+        <div class="col-lg-6">
+          <h3>Explore & Connect</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis fugit error quisquam atque minima iusto!</p>
+          <!-- check box 1 -->
+          <div class="d-flex">
+            <div class="align-self-start p-4">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="align-self-end p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi perspiciatis omnis vel eligendi! Labore, sunt!
+            </div>
+          </div>
+          <!-- check box 2 -->
+          <div class="d-flex">
+            <div class="align-self-start p-4">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="align-self-end p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi perspiciatis omnis vel eligendi! Labore, sunt!
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
