section newsletter and boxes

--- a/pickabook/index.html
+++ b/pickabook/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!-- start here -->
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top py-2 ">
+  <nav class="navbar navbar-expand-md navbar-light fixed-top py-2 ">
     <div class="container ">
       <a href="#home" class="navbar-brand">
         <img src="./img/logo2.png" height="70px" alt="pickabook-logo">
@@ -44,6 +44,90 @@
     </div>
   </nav>
 
+  <!-- SHOWCASE -->
+
+  <section id="showcase">
+    <div class="primary-overlay text-white ">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 text-center">
+            <h1 class="display-3 pt-5"> Let's find a perfect date for you</h1>
+            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum temporibus eaque nemo cupiditate, quia numquam!</p>
+            <a href="#" class="btn btn-secondary btn-lg text-white">
+              <i class="fas fa-arrow-right"></i> Tell me more
+            </a>
+          </div>
+          <div class="col-lg-6 py-3">
+            <img class="img-fluid" src="img/showcase2.jpg" alt=" showcase-image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- NEWSLETTER  -->
+  <section id="newsletter" class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <input type="text" class="form-control form-conrol-lg mb-3" placeholder=" Name">
+        </div>
+        <div class="col-md-4">
+          <input type="email" class="form-control form-conrol-lg mb-3" placeholder="Email">
+        </div>
+        <div class=" col-md-4 ">
+          <button class="btn btn-primary  btn-block ">
+            <i class="fas fa-envelope-open pr-3 "> </i> Subscribe
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- BOXES -->
+  <section class="boxes py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="card text-center border-primary mb-3">
+            <div class="card-body">
+              <h3 class="text-primary">Be Better</h3>
+              <p class="lead text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 ">
+          <div class="card text-center text-white mb-3">
+            <div class="card-body bg-primary ">
+              <h3 class="">Be Smarter</h3>
+              <p class="lead ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 ">
+          <div class="card text-center border-primary mb-3 ">
+            <div class="card-body">
+              <h3 class="text-primary">Be Faster</h3>
+              <p class="lead text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card text-center text-white mb-3">
+            <div class="card-body bg-primary ">
+              <h3 class="">Be Stronger</h3>
+              <p class="lead ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
@@ -52,12 +136,12 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin=" anonymous "></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q "
+    crossorigin="anonymous "></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl "
+    crossorigin="anonymous "></script>
 
   <script>
     // get current year for copyright
