users section complete

--- a/pickabook/index.html
+++ b/pickabook/index.html
@@ -86,7 +86,7 @@
 
 
   <!-- BOXES -->
-  <section class="boxes py-5">
+  <section class="boxes my-3 py-5">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-6">
@@ -129,6 +129,241 @@
     </div>
   </section>
 
+  <!-- HOW IT WORKS -->
+  <section id="about" class="bg-light py-3 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header py-5">
+            <h1 class="text-primary pb-3">
+              How it works
+            </h1>
+            <p class="lead pb-3">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, ab pariatur voluptatum optio distinctio beatae.
+            </p>
+          </div>
+
+          <!-- ACCORDIAN -->
+          <div id="accordian">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse1" data-toggle="collapse" data-parent="#accordian">
+                    <i class="fas fa-arrow-circle-down mr-2"></i>Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse1" class="collapse show">
+                <div class="card-body ">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione magni, reiciendis eaque maiores fuga eveniet, quod quo
+                  distinctio ut porro eum doloribus neque quibusdam aspernatur veniam quidem? Ut, facere possimus ea, illo,
+                  corrupti perferendis nihil pariatur numquam recusandae ullam voluptate sunt officiis dolor earum! Error
+                  expedita corporis aut modi eveniet?
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse2" data-toggle="collapse" data-parent="#accordian">
+                    <i class="fas fa-arrow-circle-down mr-2"></i>Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse2" class="collapse">
+                <div class="card-body ">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione magni, reiciendis eaque maiores fuga eveniet, quod quo
+                  distinctio ut porro eum doloribus neque quibusdam aspernatur veniam quidem? Ut, facere possimus ea, illo,
+                  corrupti perferendis nihil pariatur numquam recusandae ullam voluptate sunt officiis dolor earum! Error
+                  expedita corporis aut modi eveniet?
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse3" data-toggle="collapse" data-parent="#accordian">
+                    <i class="fas fa-arrow-circle-down mr-2"></i>Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse3" class="collapse">
+                <div class="card-body ">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione magni, reiciendis eaque maiores fuga eveniet, quod quo
+                  distinctio ut porro eum doloribus neque quibusdam aspernatur veniam quidem? Ut, facere possimus ea, illo,
+                  corrupti perferendis nihil pariatur numquam recusandae ullam voluptate sunt officiis dolor earum! Error
+                  expedita corporis aut modi eveniet?
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- users -->
+
+
+
+
+  <section id="users" class="my-5 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header py-5">
+            <h1 class="text-primary pb-3">
+              Users Reviews
+            </h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum odio dolore aliquid, repellat placeat eveniet?
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 py-3">
+            <div class="card ">
+              <div class="card-body">
+                <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <footer class="blockquote-footer">
+                    <cite title="Source Title">Susan Williams</cite>
+                  </footer>
+                </blockquote>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="http://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-3 col-md-6 py-3">
+            <div class="card ">
+              <div class="card-body">
+                <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <footer class="blockquote-footer">
+                    <cite title="Source Title">Grace Smith </cite>
+                  </footer>
+                </blockquote>
+                <div class="d-flex justify-content-cente">
+                  <div class="p-4">
+                    <a href="http://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 py-3">
+            <div class="card ">
+              <div class="card-body">
+                <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <footer class="blockquote-footer">
+                    <cite title="Source Title">John Doe</cite>
+                    </cite>
+                  </footer>
+                </blockquote>
+                <div class="d-flex justify-content-cente">
+                  <div class="p-4">
+                    <a href="http://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 py-3">
+            <div class="card ">
+              <div class="card-body">
+                <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <footer class="blockquote-footer">
+                    <cite title="Source Title">kevin korpa </cite>
+                  </footer>
+                </blockquote>
+                <div class="d-flex justify-content-cente">
+                  <div class="p-4">
+                    <a href="http://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
+      </div>
+
+
+
+
+
+
+    </div>
+  </section>
 
 
 
@@ -136,7 +371,8 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+
+  <script src=" https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin=" anonymous "></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q "
     crossorigin="anonymous "></script>
