--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -89,7 +89,6 @@
 
       <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
-
       </a>
       <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon"></span>
@@ -99,13 +98,29 @@
     </div>
   </section>
 
+  <!-- HOME - ICON -->
 
-
-
-
-
-
-
+  <section id="home-icons" class="py-5">
+    <div class="container">
+      <div class="row d-flex justify-content-around">
+        <div class="col-md-4 mb-4 text-center px-3">
+          <i class="fas fa-cog fa-2x mb-2"></i>
+          <h3>Turning Gears</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, cumque.</p>
+        </div>
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fas fa-cloud fa-2x mb-2"></i>
+          <h3>Sending Data</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, cumque.</p>
+        </div>
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fas fa-cart-plus fa-2x mb-2"></i>
+          <h3>Making Money</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, cumque.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src=" https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin=" anonymous "></script>
