--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -104,19 +104,50 @@
     <div class="container">
       <div class="row d-flex justify-content-around">
         <div class="col-md-4 mb-4 text-center px-3">
-          <i class="fas fa-cog fa-2x mb-2"></i>
-          <h3>Turning Gears</h3>
+          <i class="fas fa-cog fa-3x mb-2"></i>
+          <h4>Turning Gears</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, cumque.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cloud fa-2x mb-2"></i>
-          <h3>Sending Data</h3>
+          <i class="fas fa-cloud fa-3x mb-2"></i>
+          <h4>Sending Data</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, cumque.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cart-plus fa-2x mb-2"></i>
-          <h3>Making Money</h3>
+          <i class="fas fa-cart-plus fa-3x mb-2"></i>
+          <h4>Making Money</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, cumque.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- HOME HEADING SECTION -->
+  <section id="home-heading" class="py-5">
+    <div class="dark-overlay">
+      <div class="row">
+        <div class="col">
+          <div class="container pt-5">
+            <h1>Are you ready to get started ?</h1>
+            <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dicta ex minima, sapiente a ea!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- INFO SECTION  -->
+  <section id="info" class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 align-self-center">
+          <h3>Lorem Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis eveniet atque ipsam culpa nostrum impedit dignissimos
+            velit, perferendis voluptatibus cumque?</p>
+          <a href="" class="btn btn-outline-danger btn-lg">Learn More</a>
+        </div>
+        <div class="col-md-6 ">
+          <img src="./img/laptop.png" alt="" class="img-fluid">
         </div>
       </div>
     </div>
